<resources>
    <string name="app_name">Lab15-RESTAPINotes Kashitsin</string>
    <string name="login_act">Вход в аккаунт</string>
    <string name="signup_activity">Регистрация</string>
    <string name="username">Логин:</string>
    <string name="password">Пароль:</string>
    <string name="remember_me">Запомнить меня</string>
    <string name="signup">Регистрация</string>
    <string name="login">Вход</string>
    <string name="add_note">Добавить заметку</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="name_of_note">Название заметки:</string>
    <string name="txt_of_note">Текст заметки:</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="without_save">Назад</string>
    <string name="OK">ОК</string>
    <string name="Cancel">Отмена</string>
</resources>